my first commit

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <title>MorokhovetsLab-9.html</title>
 <meta charset =UTF-8>
 </HEAD>
-<body bgcolor="green"text="yellow">
-<h1 align="center"><font color="red"face="arial">Про себе</font></h1>
-<p> До <b>навчання</b> я ставлюся відповідально, тому що <u>розумію, що в XXI столітті</u> успішною може бути лише освічена людина. Мій улюблений предмет – <i>інформатика</i> </p>
-<h1>Моє хобі</h1>
-<p> Напевно, на світі немає людини, у якої не було б хобі, тобто улюбленого заняття. І неважливо, з чим це пов’язано — зі співом, малюванням, письменством, кулінарією або фотографією. Це не робота, не обов’язок і навіть не додатковий спосіб заробітку </p>
-<h2> Програмування </h2>
+<body bgcolor="black"text="yellow">
+<h1 align="center"><font color="white"face="arial">Про себе</font></h1>
+<p> Мене звати <b>Віталій</b>. Я навчаюся у <u>Національному університеті «Полтавська політехніка імені Юрія Кондратюка»</u> на спеціальності <i>комп'ютерна інженерія</i> </p>
+<h1 align="center"><font color="blue"face="arial">Моє хобі </font></h1>
+<p> Моє хобі  грати в <b>dota2 і cs:go</b> під музикою та ходити в зал  </p>
+<h2 align="center"><font color="red"face="arial"> Програмування </font> </h2>
 <p><b><font size="3"color="white">Мова програмування</font></b> - формальна знакова система, призначена для запису комп'ютерних програм. Мова програмування визначає набір лексичних, синтаксичних та семантичних правил, що задають зовнішній вигляд програми та дії, які виконає виконавець <i>(комп'ютер)</i> під її керуванням.</p>
 <p align="right"><font color="blue"><i><u>Студент 101 ТК Мороховець В.О.</font></i></u></p>
 </body>
