my first commit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <h2 align="center"><font color="red"face="arial"> Програмування </font> </h2>
 <p><b><font size="3"color="white">Мова програмування</font></b> - формальна знакова система, призначена для запису комп'ютерних програм. Мова програмування визначає набір лексичних, синтаксичних та семантичних правил, що задають зовнішній вигляд програми та дії, які виконає виконавець <i>(комп'ютер)</i> під її керуванням.</p>
 <p align="right"><font color="blue"><i><u>Студент 101 ТК Мороховець В.О.</font></i></u></p>
+<img src="12331.jpg" alt="емблема">
 </body>
 </HTML>
 
